# ideation-claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_TEST.md  Dockerfile  FORK_SETUP.md  GITHUB_ACTIONS_VALIDATION.md  MEM0_ENHANCEMENTS.md  MEM0_TROUBLESHOOTING.md  MONITORING.md  MONITORING_GUIDE.md  MONITORING_SUMMARY.md  PRIVATE_REPO_SETUP.md  QUICK_MONITOR.md  QUICK_START_PRIVATE.md  README.md  SYNC_REPOS.md  TEST_FIXES.md  docker-compose.yml  monitor-workflow.sh  pyproject.toml  pytest.ini  requirements.txt  setup-private-repo.sh  sync-from-public.sh  sync-to-private.sh  sync-to-public.sh  test-docker-quick.sh  test-docker.sh  validate_workflow.sh
.claude/: settings.json
.claude/agents/: customer-solution.md  deep-research-analyst.md  feasibility-scorer.md  market-researcher.md  report-pivot.md
.claude/commands/: compare.md  quick-check.md  report.md  research.md  validate.md
.claude/rules/: coding-standards.md  ideation-flow.md  tech-stack.md
.github/: PRIVACY.md  ideas.txt  ideas.txt.example
.github/workflows/: .test-trigger  ideation-docker.yml  ideation-private.yml  ideation.yml  monitor.yml  test.yml
scripts/: analysis_tools.py  mem0_helpers.py  slack_helpers.py  web_research.py
src/ideation_claude/: __init__.py  main.py  memory.py  monitoring.py  orchestrator.py  orchestrator_subagent.py  orchestrator_webhook.py
src/ideation_claude/agents/: market_analyst.md  pivot_advisor.md  (+1 more)
tests/: __init__.py  conftest.py  test_cli_parsing.py  test_docker.py  test_main.py  test_memory.py  test_monitoring.py  test_orchestrator.py  test_utils.py
