[project]
name = "ideation-claude"
version = "0.1.0"
description = "Multi-agent startup validator using Claude CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.20",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mem0ai>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ideation-claude = "ideation_claude.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ideation_claude"]
