[project]
name = "ideation-claude"
version = "0.1.0"
description = "Multi-agent startup validator using Claude CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.20",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mem0ai>=0.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
ideation-claude = "ideation_claude.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ideation_claude"]
